--- a/notif-grpc/rpc/templates/mopinjam.html
+++ b/notif-grpc/rpc/templates/mopinjam.html
@@ -61,7 +61,7 @@
                       <tbody>
                        <tr>
                         <td style="padding:20px 0 10px 0;">
-				<a href="#tba" style="text-decoration:none;" target="_blank"><img alt="Mopinjam" border="0" height="61" src="{{LOGO_URL}}" style="display:block; width:150px !important; font-family:'Open+Sans', 'Open Sans', Helvetica, Arial, sans-serif; font-size:22px; line-height:26px; color:#000000; text-transform:uppercase; text-align:center; letter-spacing:1px;" width="298"></a>
+				<a href="#tba" style="text-decoration:none;" target="_blank"><img alt="Mopinjam" border="0" height="auto" src="{{LOGO_URL}}" style="display:block; width:150px !important; font-family:'Open+Sans', 'Open Sans', Helvetica, Arial, sans-serif; font-size:22px; line-height:26px; color:#000000; text-transform:uppercase; text-align:center; letter-spacing:1px;" width="298"></a>
                         </td>
                        </tr>
                       </tbody>
